--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,8 @@ Hello word
 
 <html>
   <head>
+        <link type="text/css" rel="stylesheet" media="all" href="style.css" />
+
   </head>
 
   <body>
