Added meta title

--- a/hello.html
+++ b/hello.html
@@ -11,9 +11,11 @@ Hello word
 
 <html>
   <head>
+    <title>Hello World Page</title>
   </head>
 
   <body>
     <h1>Hello, World!</h1>
+    <p>Let's learn Git together.</p>
   </body>
 </html>
